--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header class="header">
       <h1>Math Drills Generator</h1>
       <div class="controls">
-        <div class="controls__min-max controls__group">
+        <div class="controls__group">
           <label>Min: <input type="number" min="1" id="value-min"></label>
           <label>Max: <input type="number" min="1" id="value-max"></label>
         </div>
-        <div class="controls__operations controls__group">
+        <div class="controls__group">
           <label>Addition: <input type="checkbox" id="op-add" checked></label>
           <label>Subtraction: <input type="checkbox" id="op-sub" checked></label>
           <label>Multiplication: <input type="checkbox" id="op-mult" checked></label>
