--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
           <label>Multiplication: <input type="checkbox" id="op-mult" checked></label>
           <label>Division: <input type="checkbox" id="op-div" checked></label>
         </div>
+        <div class="controls__group">
+          <label>Per page
+            <select id="on-page">
+              <option value="24">24</option>
+              <option value="36">36</option>
+              <option value="48">48</option>
+              <option value="54" selected>54</option>
+              <option value="60">60</option>
+              <option value="72">72</option>
+            </select>
+          </label>
+        </div>
       </div>
     </header>
     <div id="drills"></div>
