--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Math drills</title>
+  <title>Math Drills Generator</title>
+  <meta name="description" content="Math drills sheets for free! Create your own math drill sheets!">
+  <meta property="og:title" content="Math Drills Generator" />
+  <meta property="og:description" content="Math drills sheets for free! Create your own math drill sheets!" />
+  <meta property="og:url" content="https://yoksel.github.io/math-drills-generator/" />
+  <meta property="og:site_name" content="Math Drills Generator" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:title" property="twitter:title" content="Math Drills Generator" />
+  <meta name="twitter:description" property="twitter:description"
+    content="Math drills sheets for free! Create your own math drill sheets!" />
+  <meta name="twitter:card" property="twitter:card" content="summary" />
   <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
