Add reading params from url

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
       <h1>Math Drills Generator</h1>
       <div class="controls">
         <div class="controls__group">
-          <label>Min: <input type="number" min="1" id="value-min"></label>
-          <label>Max: <input type="number" min="1" id="value-max"></label>
+          <label>Min: <input type="number" id="min"></label>
+          <label>Max: <input type="number" id="max"></label>
         </div>
         <div class="controls__group">
-          <label>Addition: <input type="checkbox" id="op-add" checked></label>
-          <label>Subtraction: <input type="checkbox" id="op-sub" checked></label>
-          <label>Multiplication: <input type="checkbox" id="op-mult" checked></label>
-          <label>Division: <input type="checkbox" id="op-div" checked></label>
+          <label>Addition: <input type="checkbox" id="add" checked></label>
+          <label>Subtraction: <input type="checkbox" id="sub" checked></label>
+          <label>Multiplication: <input type="checkbox" id="mult" checked></label>
+          <label>Division: <input type="checkbox" id="div" checked></label>
         </div>
         <div class="controls__group">
-          <label>Per page
-            <select id="on-page">
+          <label>Max per page
+            <select id="per-page">
               <option value="24">24</option>
               <option value="36">36</option>
               <option value="48">48</option>
