--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             </select>
           </label>
         </div>
+        <div class="controls__group">
+          <label>Random order: <input type="checkbox" id="rand" checked></label>
+        </div>
       </div>
     </header>
     <div id="drills"></div>
