Add info about pages

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <label>Random order: <input type="checkbox" id="rand" checked></label>
         </div>
       </div>
+      <div class="stats" id="stats"></div>
     </header>
     <div id="drills"></div>
   </div>
